--- a/src/tipografia/titulos.scss
+++ b/src/tipografia/titulos.scss
@@ -1,15 +1,3 @@
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-h5,
-.h5,
-h6,
-.h6,
 .titulo-base {
   color: var(--tipografia-color);
   font-weight: 500;
@@ -18,25 +6,30 @@ h6,
   margin-bottom: map-get($espaciado, '3');
 }
 h1,.h1 {
+  @extend .titulo-base;
   font-size: 2.25rem; // 36px
 }
 h2,.h2 {
+  @extend .titulo-base;
   font-size: 2rem; // 32px
 }
 
 h3,.h3 {
+  @extend .titulo-base;
   font-size: 1.75rem; // 28px
 }
 h4,.h4 {
+  @extend .titulo-base;
   font-size: 1.5rem; // 24px
 }
 h5,.h5 {
+  @extend .titulo-base;
   font-size: 1.25rem; // 20px
 }
 h6,.h6 {
+  @extend .titulo-base;
   font-size: 1rem; // 16px
 }
-
 
 // titulos eni variables responsivas
 .titulo-eni {
